# gslab_make

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.txt  README 2.md  README.md  R_test_script.Rout  setup 2.py  setup.cfg  setup.py  test_log_sources.py
.github/: pull-request-template.md
docs/: .buildinfo  Makefile  README.md  genindex.html  index.html  objects.inv  search 2.html  search.html  searchindex.js
gslab_make/: README.md  __init__.py  check_inputs.py  check_links.py  check_repo.py  create_inputs.py  create_links.py  dir_mod.py  make_info.py  make_utility.py  modify_dir.py  move_sources.py  run_program.py  tablefill.py  textfill.py  write_input_logs.py  write_link_logs.py  write_logs.py  write_source_logs.py
gslab_make_dev/: README.html  README.md  __init__.py  _tests.py  create_links.py  dir_mod.py  documentation.html  documentation.txt  make_link_logs.py  make_links.py  make_logs.py  refactor_tests.py  run_program.py  run_program_refactor.py  template.py  write_link_logs.py  write_logs.py
gslab_python_lite/: __init__.py
input/: here_is_a_link
source/: __init__.py  check_repo.py  make_utility.py  modify_dir.py  move_sources.py  run_program.py  tablefill.py  textfill.py  write_logs.py  write_source_logs.py
sphinx/: README.md
test/: EXCLUDE_test_R.py  EXCLUDE_test_log_outputs.py  EXCLUDE_test_lyx.py  EXCLUDE_test_make_utility.py  EXCLUDE_test_move_sources.py  EXCLUDE_test_perl.py  EXCLUDE_test_stata.py  README.md  WIP_test_latex.py  WIP_test_lyx.py  WIP_test_matlab.py  WIP_test_tablefill.py  est_clear_dir.py  est_move_sources.py  est_python.py  test_R.py  (+20 more)
(+336 files in other folders)
