[metadata]
name = gslab_make
version = 2.0.0
description = Python tools for GSLab
long_description = file: README.md
url = https://github.com/gentzkow/gslab_make
author = Matthew Gentzkow
author_email = gentzkow@stanford.edu
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  pyyaml
  gitpython
  termcolor
  colorama
  jupyter
  future
